Folder View: fix keyboard shortcuts handling

Avoid handling the keyboard shortcut multiple times.

BUG: 436362


(cherry picked from commit 2c6f537026ac2b4a150b4bb44066f59f8791e30f)